--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mariadb://49.50.165.239:3306/BerMuDa
 #spring.datasource.url=jdbc:mariadb://localhost:3306/BerMuDa
 
 spring.datasource.username=BERMUDA
-spring.datasource.password=1234
+spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -13,8 +13,8 @@ spring.jpa.database-platform=org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSp
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=bermuda.tourapi@gmail.com
-spring.mail.password=aojjqfngoiwheukq
+#spring.mail.username=
+#spring.mail.password=
 #spring.mail.password=lgeaylbfcyutgqei
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
